--- a/assets/scss/partials/home/_navbar1.scss
+++ b/assets/scss/partials/home/_navbar1.scss
@@ -7,6 +7,7 @@
     font-weight: 500;
     color: black;
     margin-right: $size+10;
+    word-spacing: -1px;
 }
 
 #nav1 .nav1Left i{
